Fix delete button visibility on columns block

--- a/src/ColumnsBlock/styles.less
+++ b/src/ColumnsBlock/styles.less
@@ -109,10 +109,6 @@
     }
   }
 
-  .delete-button {
-    display: none !important;
-  }
-
   .blocks-chooser {
     right: 0;
     left: auto;
